--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         before us by our government. This platform is breaking our children's minds down to a sloppy, brain-rotted pulp.
         If you have any care for yourself and the children of america, then you will take as many precautions as
         possible in protecting yourself from these evil people. Now I must go, as I may gain some traction from this. As
-        a matter of fact, my inside agents have informed me of an inbound FBI SWAT team headed to my house to stop my work of uncovering
+        a matter of fact, my inside agents have informed me of an inbound FBI SWAT team headed to my house to stop me from uncovering
         their secrets. I will link the rest of the truth below. Farewell, and stay safe Logangsters.</p>
 
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">THE TRUTH UNMASKED</a>
