--- a/about.html
+++ b/about.html
@@ -46,11 +46,10 @@
 
     <div id="THE=TRUTH">
 <h2>THE TRUTH</h2>
-<p id="the-truth">I will leave a link below to the truth about everything. The president, the secret operation going on beneath our soil, everythink. Be advised, <b>you may not like what you see...</b></p>
+<p id="the-truth">If you'd like to know some special extra info, click the button below to unlock the <b>SECRETS OF THE UNIVERSE!</b></p>
 <figure>
-
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="Slinky" src="https://www.animatedimages.org/data/media/1096/animated-click-here-sign-and-button-image-0042.gif" alt="animated-click-here-sign-and-button-image-0042"/> </a>
-    <figcaption>gif from <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.animatedimages.org%2Fcat-click-here-signs-and-buttons-1096.htm&psig=AOvVaw1FKtuaGmOKYIOXboWeztp8&ust=1741289613958000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMCkvIXY84sDFQAAAAAdAAAAABAt">This Website.</a></figcaption>
+       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="Slinky" src="https://www.animatedimages.org/data/media/1096/animated-click-here-sign-and-button-image-0042.gif" alt="animated-click-here-sign-and-button-image-0042"/></a>
+       <figcaption style="font-size: x-small;">gif from <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.animatedimages.org%2Fcat-click-here-signs-and-buttons-1096.htm&psig=AOvVaw1FKtuaGmOKYIOXboWeztp8&ust=1741289613958000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMCkvIXY84sDFQAAAAAdAAAAABAt">This Website.</a></figcaption>
 </figure>
 </div>
 </body>
