--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </h2>
     <div class="fortnite">
 
-<p id="little-rant">Hello, My name is Collin! I am currently a 9th grade student in York Tech's IT classes. I am in a programming class, where we have learned to program our own games (see "Home" page) and are learning to make our own websites!
+<p id="little-rant">Hello, My name is Collin! I am currently a 9th grade student in York Tech. I enjoy things ike fishing, hiking, video games, etc. I love animals, and enjoy going to places like zoos. In terms of video games, I've been really obssessed with games like <a href="https://en.wikipedia.org/wiki/Minecraft">Minecraft</a> and the <a href="https://en.wikipedia.org/wiki/Star_Wars:_Battlefront">Star Wars Battlefront</a> games.
 </p>
 <figure>
 
